--- a/ExponeaSDK/Example/Example.entitlements
+++ b/ExponeaSDK/Example/Example.entitlements
@@ -4,9 +4,14 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>webcredentials:app.clickpark.cz</string>
+		<string>applinks:app.clickpark.cz</string>
+	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.Exponea.ExponeaSDK-Example</string>
+		<string>group.com.cp.test.app</string>
 	</array>
 </dict>
 </plist>
