--- a/ExponeaSDK/ExampleNotificationService/ExampleNotificationService.entitlements
+++ b/ExponeaSDK/ExampleNotificationService/ExampleNotificationService.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.Exponea.ExponeaSDK-Example</string>
+		<string>group.com.cp.test.app</string>
 	</array>
 </dict>
 </plist>
